--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-google-recaptcha": "^1.0.5",
 		"react-helmet": "^5.2.0",
 		"styled-components": "^4.1.3",
+		"styled-theming": "^2.2.0",
 		"yup": "^0.26.6"
 	},
 	"keywords": [
