--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-dom": "^16.8.6",
 		"react-google-recaptcha": "^1.0.5",
 		"react-helmet": "^5.2.0",
+		"react-icons": "^3.7.0",
 		"styled-components": "^4.1.3",
 		"styled-theming": "^2.2.0",
 		"yup": "^0.26.6"
